improved throwing/events, added hunt and ouija board interception

--- a/Phasmo cheat/Phasmo cheat.vcxproj
+++ b/Phasmo cheat/Phasmo cheat.vcxproj
@@ -173,6 +173,7 @@
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="hooking\hook.cpp" />
+    <ClCompile Include="hooking\hooks\CursedObjectsHooks.cpp" />
     <ClCompile Include="hooking\hooks\GhostAI_Update.cpp" />
     <ClCompile Include="hooking\hooks\GhostEventPlayer_Update.cpp" />
     <ClCompile Include="hooking\hooks\Player_Update.cpp" />
