Started implementing ghost control, cant control when hunting though, need to find what func the game is using to overwrite movement

--- a/Phasmo cheat/Phasmo cheat.vcxproj.filters
+++ b/Phasmo cheat/Phasmo cheat.vcxproj.filters
@@ -128,5 +128,8 @@
     <ClCompile Include="hooking\hooks\CursedObjectsHooks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="hooking\hooks\FirstPersonControllerHooks.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
