--- a/Phasmo cheat/Phasmo cheat.vcxproj.filters
+++ b/Phasmo cheat/Phasmo cheat.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SDK\il2cpp.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="hooking\hook.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -67,6 +64,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="hooking\hooks\funcs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SDK\SDK.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
